--- a/src/main/resources/templates/admin/add-movie.html
+++ b/src/main/resources/templates/admin/add-movie.html
@@ -16,29 +16,32 @@
             <form th:action="@{/add-movie}" method="post">
                 <div class="grid-container">
                     <tr>
-                        <td><input class="text-input-style" type="text" name="imdbId" pattern="^tt\d{5,8}$"
-                                   placeholder="IMDB ID" required></td>
+                        <td>
+                            <input class="text-input-style" type="text" name="imdbId" pattern="^tt\d{5,8}$"
+                                   placeholder="Wpisz IMDB ID [tt642624]" required></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="title" placeholder="Tytuł" required></td>
+                        <td><input class="text-input-style" type="text" name="title" placeholder="Wpisz tytuł filmu" required></td>
                     </tr>
-                    <tr>
-                        <td><input class="text-input-style" type="text" name="releaseYear" pattern="\d{4}"
-                                   placeholder="Rok emisji" required></td>
-                    </tr>
+                    <select class="text-input-style" name="releaseYear" required>
+                        <option value="">Wybierz rok emisji</option>
+                        <option th:each="year : ${#numbers.sequence(1950, 2024)}"
+                                th:value="${year}"
+                                th:text="${year}">1900</option>
+                    </select>
                     <tr>
                         <td><input class="text-input-style" type="text" name="imageUrl"
-                                   pattern="^(https?://www\.|https?://|www\.)\S+" placeholder="URL zdjęcia głownego"
+                                   pattern="^(https?://www\.|https?://|www\.)\S+" placeholder="Wpisz adres URL zdjęcia głownego"
                                    required></td>
                     </tr>
                     <tr>
                         <td><input class="text-input-style" type="text" name="backgroundImageUrl"
-                                   pattern="^(https?://www\.|https?://|www\.)\S+" placeholder="URL zdjęcia w tle"
+                                   pattern="^(https?://www\.|https?://|www\.)\S+" placeholder="Wpisz adres URL zdjęcia w tle"
                                    required></td>
                     </tr>
                     <tr>
                         <td><input class="text-input-style" type="text" name="mediaUrl"
-                                   pattern="^(https?://www\.|https?://|www\.)\S+" placeholder="URL do filmu" required>
+                                   pattern="^(https?://www\.|https?://|www\.)\S+" placeholder="Wpisz URL do filmu" required>
                         </td>
                     </tr>
                     <tr>
@@ -46,32 +49,34 @@
                                    pattern="^(?:[1-9]|[1-9][0-9]|1[0-9]{2}|2[0-3][0-9]|240)$"
                                    placeholder="Czas trwania [min]" required></td>
                     </tr>
+                    <select class="text-input-style" name="ageLimit" required>
+                        <option value="">Wybierz ograniczenie wiekowe</option>
+                        <option th:each="age : ${ageLimits}"
+                                th:value="${age}"
+                                th:text="${age}"></option>
+                    </select>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="ageLimit" pattern="^(?:[1-9]|[1-9][0-9])$"
-                                   placeholder="Ograniczenia wiekowe" required></td>
-                    </tr>
-                    <tr>
-                        <td><input class="text-input-style" type="text" name="description" placeholder="Opis fimu"
+                        <td><input class="text-input-style" type="text" name="description" placeholder="Wpisz opis filmu"
                                    required></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="staff" placeholder="Obsada" required></td>
+                        <td><input class="text-input-style" type="text" name="staff" placeholder="Wpisz obsadę filmu" required></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="directedBy" placeholder="Reżyser"
+                        <td><input class="text-input-style" type="text" name="directedBy" placeholder="Wpisz reżysera"
                                    required></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="languages" placeholder="Dostępne języki"
+                        <td><input class="text-input-style" type="text" name="languages" placeholder="Wpisz dostępne języki"
                                    required></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="actors" placeholder="Aktorzy" required>
+                        <td><input class="text-input-style" type="text" name="actors" placeholder="Wpisz aktorów" required>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <select name="genre" required>
+                            <select class="text-input-style" name="genre" required>
                                 <option value="">Wybierz gatunek</option>
                                 <option th:each="genre : ${genres}"
                                         th:value="${genre.genreType}"
@@ -83,7 +88,7 @@
                     <tr>
                         <td>
                             <div class="flex-container">
-                                <label for="promoted" class="checkbox-label">Promowanie:</label>
+                                <label for="promoted" class="checkbox-label">Promowanie na stronie głównej:</label>
                                 <input type="checkbox" id="promoted" name="promoted">
                             </div>
                         </td>
