--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -9,7 +9,8 @@
                             Filmy
                         </span>
                 <ul class="sub-menu">
-                    <li><a th:href="@{/add-movie}">Dodaj film</a></li>
+                    <li><a th:href="@{/add-movie-api}">Dodaj film API</a></li>
+                    <li><a th:href="@{/add-movie-form}">Dodaj film ręcznie </a></li>
                     <li><a th:href="@{/manage-movies}">Zarządzaj filmami</a></li>
                 </ul>
             </li>
