--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -12,6 +12,7 @@
     <div id="content" class="admin-panel">
         <div th:replace="~{admin/sidebar :: sidebar}"></div>
         <div class="main-content">
+            <h2 style="padding-top: 100px">W tym miejscu możesz zarządzać treściami na stronie. Dodawać, edytować oraz usuwać filmy i seriale.</h2>
 
         </div>
     </div>
