--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -17,20 +17,21 @@
         </ul>
         <ul>
             <li>
-                        <span class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA">
-                            Seriale
-                        </span>
+                <span class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA">
+                    Seriale
+                </span>
                 <ul class="sub-menu">
-                    <li><a th:href="@{/add-series}">Dodaj serial</a></li>
-                    <li><a th:href="@{/manage-series}">Zarządzaj serialami</a></li>
+                    <li><a th:href="@{/add-series-api}">Dodaj serial API</a></li>
+                    <li><a th:href="@{/add-series-form}">Dodaj serial ręcznie </a></li>
+                    <li><a th:href="@{/manage-movies}">Zarządzaj serialami</a></li>
                 </ul>
             </li>
         </ul>
         <ul>
             <li>
-                        <span class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA">
-                            Użytkownicy
-                        </span>
+                <span class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA">
+                    Użytkownicy
+                </span>
                 <ul class="sub-menu">
                     <li><a th:href="@{/manage-users}">Zarządzaj użytkownikami</a></li>
                 </ul>
