--- a/src/main/resources/templates/admin/series/add-series-form.html
+++ b/src/main/resources/templates/admin/series/add-series-form.html
@@ -9,11 +9,12 @@
 
 <div class="Layout-module-internal-page--krBv">
     <div th:replace="~{header :: header}"></div>
-    <h1 class="page-header-admin">Panel administracyjny - dodaj film</h1>
+    <h1 class="page-header-admin">Panel administracyjny - dodaj serial</h1>
     <div id="content" class="admin-panel">
         <div th:replace="~{admin/sidebar :: sidebar}"></div>
         <div class="main-content">
-            <form th:action="@{/add-movie-form}" method="post" th:object="${movie}">
+            <form th:action="@{/add-series-form}" method="post" th:object="${series}">
+                <div th:if="${error}" th:text="${error}" class="alert alert-danger"></div>
                 <div class="grid-container">
                     <tr>
                         <td>
@@ -40,31 +41,11 @@
                                    required></td>
                     </tr>
                     <tr>
-                        <td><input class="text-input-style" type="text" name="mediaUrl" th:field="*{mediaUrl}"
-                                   pattern="^(https?://www\.|https?://|www\.)\S+" placeholder="Wpisz URL do filmu" required>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><input class="text-input-style" type="text" name="timeline" th:field="*{timeline}"
-                                   pattern="^(?:[1-9]|[1-9][0-9]|1[0-9]{2}|2[0-3][0-9]|240)$"
-                                   placeholder="Czas trwania [min]" required></td>
-                    </tr>
-                    <select class="text-input-style" name="ageLimit" th:field="*{ageLimit}" required>
-                        <option value="">Wybierz ograniczenie wiekowe</option>
-                        <option th:each="age : ${ageLimits}"
-                                th:value="${age}"
-                                th:text="${age}"></option>
-                    </select>
-                    <tr>
                         <td><input class="text-input-style" type="text" name="description" th:field="*{description}" placeholder="Wpisz opis filmu"
                                    required></td>
                     </tr>
                     <tr>
                         <td><input class="text-input-style" type="text" name="staff" th:field="*{staff}" placeholder="Wpisz obsadę filmu" required></td>
-                    </tr>
-                    <tr>
-                        <td><input class="text-input-style" type="text" name="directedBy" th:field="*{directedBy}" placeholder="Wpisz reżysera"
-                                   required></td>
                     </tr>
                     <tr>
                         <td><input class="text-input-style" type="text" name="languages" th:field="*{languages}" placeholder="Wpisz dostępne języki"
@@ -81,11 +62,23 @@
                             </select>
                         </td>
                     </tr>
+                    <select class="text-input-style" name="ageLimit" th:field="*{ageLimit}" required>
+                        <option value="">Wybierz ograniczenie wiekowe</option>
+                        <option th:each="age : ${ageLimits}"
+                                th:value="${age}"
+                                th:text="${age}"></option>
+                    </select>
                     <tr>
                         <td><input class="text-input-style" type="text" name="imdbRating" th:field="*{imdbRating}"
-                                   pattern="^(?:[1-9]|[1-9][0-9]|1[0-9]{2}|2[0-3][0-9]|240)$"
+                                   pattern="^(10(\.0{1,2})?|[0-9](\.[0-9]{1,2})?)$"
                                    placeholder="Ocena filmu z IMDB" required></td>
                     </tr>
+                    <select class="text-input-style" name="seasonsCount" th:field="*{seasonsCount}" required>
+                        <option value="">Wybierz ilość sezonów</option>
+                        <option th:each="seasonNumber : ${#numbers.sequence(1, 30)}"
+                                th:value="${seasonNumber}"
+                                th:text="${seasonNumber}">1</option>
+                    </select>
                     <tr>
                         <td>
                             <div class="flex-container">
@@ -98,7 +91,7 @@
                 <div class="submit-button-movie-page">
                     <button type="submit"
                             class="PlayButtonText-module-container-tunCR Buttons-module-primary--YHdl"
-                            tabindex="0">Dodaj film
+                            tabindex="0">Dodaj serial
                     </button>
                 </div>
             </form>
