--- a/src/main/resources/templates/admin/series/add-series-form.html
+++ b/src/main/resources/templates/admin/series/add-series-form.html
@@ -14,7 +14,7 @@
         <div th:replace="~{admin/sidebar :: sidebar}"></div>
         <div class="main-content">
             <form th:action="@{/add-series-form}" method="post" th:object="${series}">
-                <div th:if="${error}" th:text="${error}" class="alert alert-danger"></div>
+                <div th:if="${message}" th:text="${message}" class="alert alert-danger"></div>
                 <div class="grid-container">
                     <tr>
                         <td>
