--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -23,7 +23,7 @@
                 <ul class="sub-menu">
                     <li><a th:href="@{/add-series-api}">Dodaj serial API</a></li>
                     <li><a th:href="@{/add-series-form}">Dodaj serial ręcznie </a></li>
-                    <li><a th:href="@{/manage-movies}">Zarządzaj serialami</a></li>
+                    <li><a th:href="@{/manage-series}">Zarządzaj serialami</a></li>
                 </ul>
             </li>
         </ul>
